# backApp

./: .directory  .gitignore  BackApp.sln  CMakeLists.txt  README.md  backapp.pro  basic.cpp  basic.h  config.hpp  config.txt  custom.cpp  custom.hpp  main.cpp  watcher.cpp  watcher.hpp
BackApp/: BackApp.cpp  BackApp.vcxproj  BackApp.vcxproj.filters  config.txt  stdafx.cpp
BackApp/Debug/: BackApp.pch  vc141.idb
BackApp/Debug/BackApp.tlog/: BackApp.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BackApp/x64/Debug/: BackApp.pch  vc141.idb
BackApp/x64/Debug/BackApp.tlog/: BackApp.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: BackApp.ilk
x64/Debug/: BackApp.ilk
